--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "JSON db using filesystem",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "grunt test"
   },
   "repository": {
     "type": "git",
@@ -24,5 +24,14 @@
   "dependencies": {
     "body-parser": "^1.9.2",
     "express": "^4.10.1"
+  },
+  "devDependencies": {
+    "chai": "^1.9.2",
+    "chai-http": "^1.0.0",
+    "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-jscs": "^0.8.1",
+    "grunt-simple-mocha": "^0.4.0"
   }
 }
