--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "grunt-cli": "^0.1.13",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-jscs": "^0.8.1",
-    "grunt-simple-mocha": "^0.4.0"
+    "grunt-simple-mocha": "^0.4.0",
+    "superagent": "^0.20.0"
   }
 }
